--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,7 @@ env:
   # that you have push privileges to
   REGISTRY_REPO: TGM-HIT/typst-packages
   # the path within that repo where the "<name>/<version>" directory should be put
-  # for the Typst package registry, keep this as is
-  PATH_PREFIX: packages/preview
+  PATH_PREFIX: .
 
 jobs:
   release:
@@ -41,7 +40,7 @@ jobs:
           fi
 
       - name: Install package locally
-        run: just install-preview
+        run: just install-tgm
 
       - name: Build package
         run: |
