[customize TGM] checkout @tgm package registry when in CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           typst-version: latest
 
+      - name: Setup TGM package registry
+        uses: ./.github/setup-private-registry/
+        with:
+          repository: TGM-HIT/typst-packages
+          token: ${{ secrets.REGISTRY_TOKEN }}
+          namespace: tgm
+
       - name: Determine and check package metadata
         run: |
           . scripts/setup
