--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,13 @@ jobs:
         with:
           typst-version: ${{ matrix.typst-version.typst }}
 
+      - name: Setup TGM package registry
+        uses: ./.github/setup-private-registry/
+        with:
+          repository: TGM-HIT/typst-packages
+          token: ${{ secrets.REGISTRY_TOKEN }}
+          namespace: tgm
+
       - name: Install package locally
         run: just install-tgm
 
