--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           typst-version: ${{ matrix.typst-version.typst }}
 
+      - name: Install package locally
+        run: just install-preview
+
       - name: Run test suite
         run: just test
 
